<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingActivity">

    <Button
        android:id="@+id/button_add_fuel"
        android:layout_width="361dp"
        android:layout_height="66dp"
        android:layout_marginBottom="4dp"
        android:text="@string/tankowanie"
        app:layout_constraintBottom_toTopOf="@+id/button_add_repair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_add_oc"
        android:layout_width="361dp"
        android:layout_height="66dp"
        android:layout_marginBottom="4dp"
        android:text="@string/ubezpieczenia"
        app:layout_constraintBottom_toTopOf="@+id/button_add_pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_add_pt"
        android:layout_width="361dp"
        android:layout_height="66dp"
        android:layout_marginBottom="128dp"
        android:text="@string/przegl_d_techniczny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_add_expenses"
        android:layout_width="361dp"
        android:layout_height="66dp"
        android:layout_marginBottom="8dp"
        android:text="Inne wydatki"
        app:layout_constraintBottom_toTopOf="@+id/button_add_oc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_add_repair"
        android:layout_width="361dp"
        android:layout_height="66dp"
        android:layout_marginBottom="4dp"
        android:text="@string/naprawy"
        app:layout_constraintBottom_toTopOf="@+id/button_add_expenses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_btn_adding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="231dp"
        android:layout_height="68dp"
        android:text="Wybierz wydatek"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_add_fuel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

</androidx.constraintlayout.widget.ConstraintLayout>